# sitzungsverwaltung

./: Cargo.toml  flake.nix
.github/workflows/: rust.yml
src/: main.rs
